// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenus closed matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="headerNavTop"
  >
    <h1
      class="productLogo"
    >
      <a
        aria-label="パンダシャーク"
        href="/"
        target="_self"
      >
        <div
          style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
        >
          <div
            style="box-sizing: border-box; display: block; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              role="presentation"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iODAiIGhlaWdodD0iNDAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
              style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
            />
          </div>
          <noscript />
          <img
            alt="Pandashark's icon"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
        </div>
      </a>
    </h1>
    <ul>
      <li>
        <a
          class="linkItem"
          href="/about"
        >
          About
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="/samples"
        >
          Samples
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="/contact"
        >
          Contact
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="https://twitter.com/pandashark6"
        >
          <img
            alt="twitter"
            src="/img/icons/twitter-logo.svg"
          />
          <span>
            Twitter
          </span>
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="https://github.com/x7ddf74479jn5"
        >
          <img
            alt="github"
            src="/img/icons/github-logo.svg"
          />
          <span>
            GitHub
          </span>
        </a>
      </li>
      <li>
        <button
          class="buttonItem"
        >
          <img
            alt="chatBot"
            src="/img/icons/question_answer_black.svg"
          />
          <span>
            Chat Bot
          </span>
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`HeaderMenus open matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="headerNavTopOpen"
  >
    <h1
      class="productLogoOpen"
    >
      <a
        aria-label="パンダシャーク"
        href="/"
        target="_self"
      >
        <div
          style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
        >
          <div
            style="box-sizing: border-box; display: block; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              role="presentation"
              src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iODAiIGhlaWdodD0iNDAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
              style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
            />
          </div>
          <noscript />
          <img
            alt="Pandashark's icon"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
        </div>
      </a>
    </h1>
    <ul>
      <li>
        <a
          class="linkItem"
          href="/about"
        >
          About
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="/samples"
        >
          Samples
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="/contact"
        >
          Contact
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="https://twitter.com/pandashark6"
        >
          <img
            alt="twitter"
            src="/img/icons/twitter-logo.svg"
          />
          <span>
            Twitter
          </span>
        </a>
      </li>
      <li>
        <a
          class="linkItem"
          href="https://github.com/x7ddf74479jn5"
        >
          <img
            alt="github"
            src="/img/icons/github-logo.svg"
          />
          <span>
            GitHub
          </span>
        </a>
      </li>
      <li>
        <button
          class="buttonItem"
        >
          <img
            alt="chatBot"
            src="/img/icons/question_answer_black.svg"
          />
          <span>
            Chat Bot
          </span>
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
